<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="data"
            type="com.inlay.concertswatcher.data.Data" />

        <variable
            name="location"
            type="com.inlay.concertswatcher.data.Location" />

        <!--        <variable-->
        <!--            name="detailsClickListener"-->
        <!--            type="com.inlay.concertswatcher.presentation.mainList.DetailsClickListener" />-->
    </data>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardElevation="0dp"
        app:strokeColor="@color/stroke_color"
        app:strokeWidth="1dp">
        <!--    tools:context=""-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/card_image"
                android:layout_width="match_parent"
                android:layout_height="194dp"
                android:contentDescription="@string/card_image"
                android:scaleType="centerCrop" />
            <!--                app:profileImage="@{data.image}" />-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/card_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{data.name}"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                    tools:text="@string/card_name" />
                <!--                    android:text="@{data.name}"-->

                <TextView
                    android:id="@+id/card_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@{location.name}"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="?android:attr/textColorSecondary"
                    tools:text="@string/card_location_name" />
                <!--                    android:text="@{location.name}"-->

                <TextView
                    android:id="@+id/card_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@{data.startDate.substring(0,16).replace('-','.').replace('T', ' ') + '-' + data.endDate.replace('-','.')}"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="?android:attr/textColorSecondary"
                    tools:text="@string/card_combo_date" />
                <!--                    android:text="@{data.startDate.substring(0,16).replace('-','.').replace('T', ' ') + '-' + data.endDate.replace('-','.')}"-->

                <TextView
                    android:id="@+id/card_details"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/card_details"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="?android:attr/textColorSecondary" />
                <!--                    android:onClick="@{() -> detailsClickListener.detailsClicked(data)}" -->
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>