<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <!--        <variable-->
        <!--            name="addDateOnClick"-->
        <!--            type="com.inlay.concertswatcher.presentation.search.DateOnClickListener" />-->
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/search_view"
            style="?attr/materialSearchBarStyle"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="?attr/actionBarSize"
            android:layout_marginEnd="16dp"
            android:iconifiedByDefault="false"
            android:inputType="text"
            android:queryHint="Search here"
            android:text="Search"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </EditText>

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_view">

            <RadioButton
                android:id="@+id/artist_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/radiobutton_states"
                android:checked="true"
                android:text="@string/radiobutton_artist" />

            <RadioButton
                android:id="@+id/venue_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/radiobutton_states"
                android:text="@string/radiobutton_venue" />

            <RadioButton
                android:id="@+id/location_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/radiobutton_states"
                android:text="@string/radiobutton_location" />
        </RadioGroup>

        <!--        <DatePicker-->
        <!--            android:id="@+id/date_picker"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_margin="16dp"-->
        <!--            android:datePickerMode="spinner"-->
        <!--            app:layout_constraintBottom_toBottomOf="parent"-->
        <!--            app:layout_constraintEnd_toEndOf="parent"-->
        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            app:layout_constraintTop_toBottomOf="@+id/radio_group" />-->
        <!--        <Button-->
        <!--            android:id="@+id/date_button"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_margin="16dp"-->
        <!--            android:text="Add date"-->
        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            app:layout_constraintTop_toBottomOf="@id/radio_group"-->
        <!--            app:onClick="@{()-> addDateOnClick}" />-->

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>